--- a/config/mysql_config.json
+++ b/config/mysql_config.json
@@ -1,7 +1,7 @@
 {
     "IP": "localhost",
-    "USR": "prueba",
-    "PWD": "asd1234",
+    "USR": "angel",
+    "PWD": "morantuz1155",
     "DB" : "flamingo",
     "PORT": "3306"
 }
