Agregado sesiones [1/2], Edite listar_alumnos, corregi problemas generales. Porfavor testear el sitio, corregit lo que este mal. salu2. PD: No incluyan msql_config.json en los commit.

--- a/config/mysql_config.json
+++ b/config/mysql_config.json
@@ -1,7 +1,7 @@
 {
     "IP": "localhost",
-    "USR": "angel",
-    "PWD": "morantuz1155",
+    "USR": "prueba",
+    "PWD": "asd1234",
     "DB" : "flamingo",
     "PORT": "3306"
 }
