--- a/config/mysql_config.json
+++ b/config/mysql_config.json
@@ -1,6 +1,6 @@
 {
     "IP": "localhost",
-    "USR": "prueba",
+    "USR": "jorge",
     "PWD": "asd1234",
     "DB" : "flamingo",
     "PORT": "3306"
